--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="welcome">
 			<div class="container">
 				<h1>Hey there, fellow human!</h1>
-				<p>This is a website to remind you of one of the greatest life challenges: To be a good companion for yourself. Don't judge yourself to harshly, especially in times like this. You don't need to thrive right now. You don't need to achieve great things.</p>
+				<p class="normal-text">This is a website to remind you of one of the greatest life challenges: To be a good companion for yourself. Don't judge yourself to harshly, especially in times like this. You don't need to thrive right now. You don't need to achieve great things.</p>
 				<button type="button" name="sign-up" class="button">Sign Up!</button>
 			</div>
 			<img src="images/hello.jpg" alt="a cute animal saying hello, my friend" class="rounded-corners" width="300px">
@@ -45,13 +45,15 @@
 
 		<div class="quote">
 			<p class="quotation">"Self-care is never a selfish act — it is simply good stewardship of the only gift I have, the gift I was put on earth to offer to others."</p>
-			<p id = "author">Parker Palmer</p>
+			<p id = "author">- Parker Palmer</p>
 		</div>
 
 		<div class="sign-up">
-			<p class="bold">"It's time! Start your journey towards more self-compassion."</p>
-			<p>Sign up for inspiring news in your inbox by clicking on the button on the right.</p>
-			<button type="button" name="sign-up">Sign up!</button>
+			<div class="sign-up-text">
+				<p class="bold">It's time! Start your journey towards more self-compassion.</p>
+				<p>Sign up for inspiring news in your inbox by clicking on the button on the right.</p>
+			</div>
+			<button type="button" name="sign-up" class="button" id="white-button">Sign up!</button>
 		</div>
 
 		<div class="footer">
